<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:layout_scrollFlags="scroll|enterAlways"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profile_phone"
                android:text="Phone numbers"
                android:textColor="@color/btn_login"
                android:padding="10dp"/>

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_phone_number"
                android:hint="@string/hint_phone_number"
                android:textColor="@color/input_login"
                android:inputType="phone"
                android:textColorHint="@color/input_login_hint"
                android:layout_marginTop="5dip"
                android:padding="10dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profile_password"
                android:textColor="@color/btn_login"
                android:padding="10dp"
                android:text="Password"
                android:layout_marginTop="5dip"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/profile_password"
                android:hint="@string/hint_password"
                android:textColor="@color/input_login"
                android:padding="10dp"
                android:inputType="textPassword"
                android:layout_marginTop="10dip"
                />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tv_profile_confirm_password"
                android:textColor="@color/btn_login"
                android:padding="10dp"
                android:text="Confirm Password"
                android:layout_marginTop="5dip"
                />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/confirm_password"
                android:hint="@string/hint_confirm_password"
                android:textColor="@color/input_login"
                android:padding="10dp"
                android:inputType="textPassword"
                android:layout_marginTop="10dip"
                />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_save_profile"
                android:text="@string/btn_save_profile"
                android:textSize="15sp"
                android:background="@color/bg_login"
                android:layout_marginTop="20dip"
                android:textAllCaps="false"
                android:textColor="@color/white"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_delete_profile"
                android:text="Delete"
                android:textSize="15sp"
                android:background="@color/bg_login"
                android:layout_marginTop="20dip"
                android:textAllCaps="false"
                android:textColor="@color/white"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>
